test/hotCases/errors/events/k_valueC.js
export const valueC = 1;
---
export const valueC = 2;
